--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| hide\n",
+    "# | hide\n",
     "from forensicface.app import ForensicFace\n",
     "import matplotlib.pyplot as plt"
    ]
@@ -17,7 +17,7 @@
    "source": [
     "# forensicface\n",
     "\n",
-    "> An attempt to build a package for forensic face examination"
+    "> A package for forensic face examination"
    ]
   },
   {
@@ -42,13 +42,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Os arquivos onnx dos modelos de detecção (det_10g.onnx), pose (1k3d68.onnx) e gênero/idade (genderage.onnx) devem estar na pasta `~/.insightface/model/sepaelv2/`\n",
+    "Os arquivos onnx dos modelos de detecção (det_10g.onnx), pose (1k3d68.onnx) e gênero/idade (genderage.onnx) devem estar na pasta `~/.insightface/model/<model_name>/`\n",
     "\n",
-    " O arquivo onnx do modelo de reconhecimento (adaface_ir101web12m.onnx) deve estar na pasta `~/.insightface/model/sepaelv2/adaface/`\n",
+    " O arquivo onnx do modelo de reconhecimento (adaface_ir101web12m.onnx) deve estar na pasta `~/.insightface/model/<model_name>/adaface/`\n",
     "\n",
-    " O arquivo onnx do modelo magface (magface_iresnet100.onnx) deve estar na pasta `~/.insightface/model/sepaelv2/magface/`\n",
+    " O arquivo onnx do modelo magface (magface_iresnet100.onnx) deve estar na pasta `~/.insightface/model/<model_name>/magface/`\n",
     "\n",
-    " A partir da versão 0.1.5 é possível utilizar outros modelos além do `sepaelv2`"
+    " O arquivo onnx do modelo de qualidade CR_FIQA (cr_fiqa_l.onnx) deve estar na pasta `~/.insightface/model/<model_name>/cr_fiqa/`\n",
+    "\n",
+    " O modelo padrão é denominado `sepaelv2`. A partir da versão 0.1.5 é possível utilizar outros modelos."
    ]
   },
   {
@@ -64,9 +66,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Importação da classe ForensicFace:\n",
-    "\n",
-    "`from forensicface.app import ForensicFace`"
+    "Importação da classe ForensicFace:"
    ]
   },
   {
@@ -74,6 +74,36 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "from forensicface.app import ForensicFace"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Instanciamento do ForensicFace:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Applied providers: ['CUDAExecutionProvider', 'CPUExecutionProvider'], with options: {'CPUExecutionProvider': {}, 'CUDAExecutionProvider': {'device_id': '0', 'gpu_mem_limit': '18446744073709551615', 'gpu_external_alloc': '0', 'gpu_external_free': '0', 'gpu_external_empty_cache': '0', 'cudnn_conv_algo_search': 'EXHAUSTIVE', 'cudnn_conv1d_pad_to_nc1d': '0', 'arena_extend_strategy': 'kNextPowerOfTwo', 'do_copy_in_default_stream': '1', 'enable_cuda_graph': '0', 'cudnn_conv_use_max_workspace': '1', 'tunable_op_enable': '0', 'enable_skip_layer_norm_strict_mode': '0', 'tunable_op_tuning_enable': '0'}}\n",
+      "find model: /home/rafael/.insightface/models/sepaelv2/1k3d68.onnx landmark_3d_68 ['None', 3, 192, 192] 0.0 1.0\n",
+      "Applied providers: ['CUDAExecutionProvider', 'CPUExecutionProvider'], with options: {'CPUExecutionProvider': {}, 'CUDAExecutionProvider': {'device_id': '0', 'gpu_mem_limit': '18446744073709551615', 'gpu_external_alloc': '0', 'gpu_external_free': '0', 'gpu_external_empty_cache': '0', 'cudnn_conv_algo_search': 'EXHAUSTIVE', 'cudnn_conv1d_pad_to_nc1d': '0', 'arena_extend_strategy': 'kNextPowerOfTwo', 'do_copy_in_default_stream': '1', 'enable_cuda_graph': '0', 'cudnn_conv_use_max_workspace': '1', 'tunable_op_enable': '0', 'enable_skip_layer_norm_strict_mode': '0', 'tunable_op_tuning_enable': '0'}}\n",
+      "find model: /home/rafael/.insightface/models/sepaelv2/det_10g.onnx detection [1, 3, '?', '?'] 127.5 128.0\n",
+      "Applied providers: ['CUDAExecutionProvider', 'CPUExecutionProvider'], with options: {'CPUExecutionProvider': {}, 'CUDAExecutionProvider': {'device_id': '0', 'gpu_mem_limit': '18446744073709551615', 'gpu_external_alloc': '0', 'gpu_external_free': '0', 'gpu_external_empty_cache': '0', 'cudnn_conv_algo_search': 'EXHAUSTIVE', 'cudnn_conv1d_pad_to_nc1d': '0', 'arena_extend_strategy': 'kNextPowerOfTwo', 'do_copy_in_default_stream': '1', 'enable_cuda_graph': '0', 'cudnn_conv_use_max_workspace': '1', 'tunable_op_enable': '0', 'enable_skip_layer_norm_strict_mode': '0', 'tunable_op_tuning_enable': '0'}}\n",
+      "find model: /home/rafael/.insightface/models/sepaelv2/genderage.onnx genderage ['None', 3, 96, 96] 0.0 1.0\n",
+      "set det-size: (320, 320)\n"
+     ]
+    }
+   ],
    "source": [
     "ff = ForensicFace(det_size=320, use_gpu=True)"
    ]
@@ -84,7 +114,7 @@
    "metadata": {},
    "source": [
     "## Processamento básico de imagens\n",
-    "Obter pontos de referência, distância interpupilar, representação vetorial e a face alinhada com dimensão fixa (112x112)"
+    "Obter pontos de referência, distância interpupilar, representação vetorial, a face alinhada com dimensão fixa (112x112), estimativas de sexo, idade, pose (_pitch_, _yaw_, _roll_) e qualidade."
    ]
   },
   {
@@ -95,7 +125,7 @@
     {
      "data": {
       "text/plain": [
-       "dict_keys(['keypoints', 'ipd', 'gender', 'age', 'pitch', 'yaw', 'roll', 'embedding', 'norm', 'magface_embedding', 'magface_norm', 'aligned_face'])"
+       "dict_keys(['keypoints', 'ipd', 'embedding', 'norm', 'bbox', 'aligned_face', 'gender', 'age', 'pitch', 'yaw', 'roll', 'fiqa_score'])"
       ]
      },
      "execution_count": null,
@@ -124,7 +154,7 @@
     {
      "data": {
       "text/plain": [
-       "0.8555868"
+       "0.85562766"
       ]
      },
      "execution_count": null,
@@ -133,7 +163,7 @@
     }
    ],
    "source": [
-    "ff.compare(\"obama.png\",\"obama2.png\")"
+    "ff.compare(\"obama.png\", \"obama2.png\")"
    ]
   },
   {
@@ -141,7 +171,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Agregar embeddings de duas imagens faciais em uma única representação"
+    "Agregar embeddings de duas imagens faciais em uma única representação, com ponderação por qualidade"
    ]
   },
   {
@@ -161,7 +191,7 @@
     }
    ],
    "source": [
-    "agg = ff.aggregate_from_images([\"obama.png\",\"obama2.png\"])\n",
+    "agg = ff.aggregate_from_images([\"obama.png\", \"obama2.png\"], quality_weight=True)\n",
     "agg.shape"
    ]
   },
@@ -170,13 +200,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Suporte a MagFace\n",
+    "## Estimativa de qualidade CR-FIQA\n",
     "\n",
-    "Estimativa de qualidade pela norma da representação [MagFace](https://github.com/IrvingMeng/MagFace)\n",
+    "Estimativa de qualidade pelo método [CR-FIQA](https://github.com/fdbtrs/CR-FIQA)\n",
     "\n",
-    "Para utilizar, instancie o forensicface com a opção magface = True:\n",
+    "Para desabilitar, instancie o forensicface com a opção extended = False:\n",
     "\n",
-    "``ff = ForensicFace(magface=True)``"
+    "``ff = ForensicFace(extended=False)``\n",
+    "\n",
+    "Obs.: a opção `extended = False` também desabilita as estimativas de sexo, idade e pose."
    ]
   },
   {
@@ -187,7 +219,7 @@
     {
      "data": {
       "text/plain": [
-       "(24.875765, 21.319853)"
+       "(2.3786173, 1.4386057)"
       ]
      },
      "execution_count": null,
@@ -196,10 +228,9 @@
     }
    ],
    "source": [
-    "ff = ForensicFace(det_size=320, use_gpu=True, magface=True)\n",
-    "good = ff.process_image(\"obama.png\")\n",
-    "bad = ff.process_image(\"obama2.png\")\n",
-    "good[\"magface_norm\"], bad[\"magface_norm\"]"
+    "good = ff.process_image(\"001_frontal.jpg\")\n",
+    "bad = ff.process_image(\"001_cam1_1.jpg\")\n",
+    "good[\"fiqa_score\"], bad[\"fiqa_score\"]"
    ]
   },
   {
@@ -211,15 +242,15 @@
     "\n",
     "- Detecção, gênero (M/F), idade e pose (pitch, yaw, roll): [insightface](https://github.com/deepinsight/insightface)\n",
     "\n",
-    "- Reconhecimento: [adaface](https://github.com/mk-minchul/AdaFace) e [MagFace](https://github.com/IrvingMeng/MagFace)\n",
+    "- Reconhecimento: [adaface](https://github.com/mk-minchul/AdaFace)\n",
     "\n",
-    "- Estimativa de qualidade: [MagFace](https://github.com/IrvingMeng/MagFace)\n"
+    "- Estimativa de qualidade: [CR-FIQA](https://github.com/fdbtrs/CR-FIQA)\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "onnxgpu",
+   "display_name": "python3",
    "language": "python",
    "name": "python3"
   }
